# hibiki-hook

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  engine-support.yaml
.github/workflows/: voice-hook-helper.yml
config/: luna_hook_profiles.tsv
docs/: engine-support.md
hook/: adapter.h  adapter_registry.inc  artemis_pfs.h  asar_runtime.h  bgi_arc.h  catsystem2_int.h  dll_main.cpp  ffmpeg_runtime.h  il2cpp_thread_scope.h  malie_cfi.h  malie_lib.h  qlie_pack.h  siglus_ovk.h  siglus_text.h  visual_arts_ovk.h  voice_resource_filename.h  voice_resource_pairing.h
hook/adapters/: artemis_adapter.inc  artemis_profile.h  bgi_ethornell_adapter.inc  bgi_ethornell_profile.h  catsystem2_adapter.inc  catsystem2_profile.h  kirikiri_adapter.inc  loopback_adapter.inc  malie_adapter.inc  malie_profile.h  qlie_adapter.inc  qlie_profile.h  reallive_adapter.inc  reallive_profile.h  renpy_adapter.inc  siglus_adapter.inc  text_render_adapter.inc  tyrano_adapter.inc  unity_adapter.inc  windows_audio_adapter.inc
include/: luna_bridge.h  luna_hook_config.h  luna_hook_profiles.inc  luna_text_selector.h  luna_version.h  siglus_launch.h  steam_launch.h  voice_hook_ipc.h  voice_hook_session.h
injector/: child_process_policy.h  injector_main.cpp  locale_emulator_launch.h
profiles/: artemis_pfs.json  bgi_ethornell.json  catsystem2.json  malie.json  qlie_filepack.json  reallive.json
tests/: adapter_contract_test.cpp  adapter_structure_test.py  child_process_policy_test.cpp  engine_support_manifest_test.py  evidence_contract_test.py  ffmpeg_runtime_test.cpp  galhook_workflow_test.py  il2cpp_thread_scope_test.cpp  locale_emulator_launch_test.cpp  luna_bridge_abi_test.cpp  luna_hook_config_test.cpp  luna_text_replay_test.cpp  qlie_pack_test.cpp  reallive_adapter_test.cpp  resource_audio_ready_test.cpp  session_reuse_test.cpp  siglus_launch_test.cpp  siglus_ovk_test.cpp  siglus_text_test.cpp  steam_launch_test.cpp  unity_event_cursor_test.cpp  voice_resource_filename_test.cpp
tests/fixtures/: luna_thread_selection.tsv  reallive_replay.json  workflow_replay.json
tool/: galhook.ps1
tools/: galhook.py  galhook_evidence.py  generate_engine_support.py  generate_luna_profiles.py  luna_symcheck.cpp  ring_probe.cpp  sync_lunahook.ps1
unity_audio_extract/: Hibiki.UnityAudioExtract.csproj  Program.cs  fetch_runtime.ps1
